@@ -1,3 +1,13 @@
+2005-09-12  Paolo Carlini  <pcarlini@suse.de>
+
+	PR libstdc++/23767
+	* include/bits/stl_iterator.h (__normal_iterator::
+	__normal_iterator<>(const __normal_iterator<_Iter, _Container>&)):
+	Enable only when _Iter is equal to _Container::pointer.
+	* testsuite/21_strings/basic_string/types/23767.cc: New.
+	* testsuite/23_containers/vector/types/23767.cc: Likewise.
+	* testsuite/ext/vstring/types/23767.cc: Likewise.
+
 2005-09-11  Benjamin Kosnik  <bkoz@redhat.com>
 
 	PR libstdc++/19265
